Youtube Demo/src/objects/Release_Window_Config__c.object
<CustomObject>
    <fields>
        <fullName>Release_End_Date__c</fullName>
        <label>Release End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Start_Date__c</fullName>
        <label>Release Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserLockoutStatus__c</fullName>
        <label>UserLockoutStatus</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lock</fullName>
                </value>
                <value>
                    <fullName>Unlock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>profiles_to_lock__c</fullName>
        <label>profiles to lock</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release Window Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Window Config ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Window Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>